# CS-369-AI

./: .gitignore  intro_to_features.ipynb  pyproject.toml
examples/: k_means.ipynb
exercises/: CS369_01_Introduction_to_Feature_Vectors.ipynb  Class Exercise Embedding.ipynb  Class Exercise KMeans.ipynb  Class_Exercise_HOG_Features.ipynb  Search Algorithms Part 1.ipynb  intro_to_features.ipynb
image_classification/: CS369 Classifier Starter Code.ipynb  Image_Classification_Daniel.ipynb  Image_Classification_Daniel.py  classification_writeup.tex
vacuum/: A_star.py  agent_common.py  hamiltonianlike_path_finder.py  mapping_memory.py  mapping_node.py  tsp.py  vacuum.py  vacuum_agents.py
