[tool.poetry]
name = "cs-369-ai"
version = "0.1.0"
description = ""
authors = ["Daniel <rowedanielp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.0.7"
numpy = "^1.26.3"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
pyarrow = "^15.0.0"
pillow = "^10.2.0"
scikit-image = "^0.22.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
